<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-2017 Hayai Software
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND
  ~ either express or implied. See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Hayai Launcher</string>
    <string name="title_activity_search" translatable="false">Hayai Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="application_icon_desc" >Application Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="clear_button">Clear Text Button</string>
    <string name="overflow_menu_button">Overflow Menu Button</string>
    <string name="search_view_hint">Type something…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_notification_category">Notifications</string>
    <string name="settings_enable_notification_title">Show shortcut in notification panel</string>
    <string name="settings_enable_icons_title">Display app icons</string>
    <string name="application_icon_content_description">Application Icon</string>
    <string name="appmenu_launch">Launch</string>
    <string name="appmenu_favorite">Favorite</string>
    <string name="appmenu_info">App information</string>
    <string name="app_item_bottom_never">Never launched</string>
    <string name="app_item_favorite_symbol" translatable="false">★</string>
    <string name="title_activity_about">About</string>
    <string name="launch">Go</string>
    <string name="action_refresh_app_list">Refresh app list</string>
    <string name="action_system_settings">Device settings</string>
    <string name="activity_not_found">Activity not found.</string>
    <string name="action_about">About</string>
    <string name="about_content">Hayai Launcher [APP_VERSION]
\n
\nProject Website:
\nhttps://github.com/seizonsenryaku/HayaiLauncher
\n
\nContributors:
\n\tEdgar Villani Peres (seizonsenryaku)
\n\tDalton de Oliveira Silva(daltonos)
\n
\n-
\n
\n Copyright 2015 Hayai Software
\n
\n Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
\n You may obtain a copy of the License at
\n
\n https://www.apache.org/licenses/LICENSE-2.0
\n
\n Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\n See the License for the specific language governing permissions and
\n limitations under the License.
\n</string>
    <string name="action_manage_apps">Manage apps</string>
    <string name="appmenu_onplaystore">Open on app market</string>
    <string name="pref_basetheme" >Base Theme</string>
    <string name="pref_notification_priority">Notification priority</string>
    <string name="settings_autokeyboard">Open keyboard automatically</string>
    <string name="settings_category_general_category">General</string>
    <string name="pref_preferred_order_dialog">App order</string>
    <string name="pref_preferred_app_order_dialog">App order</string>
    <string name="settings_disable_icon_loading">Disable icon loading</string>
    <string name="appmenu_pin_to_top">Pin To Top</string>
    <string name="pref_notification_priority_entries_high">High</string>
    <string name="pref_notification_priority_entries_low">Low (no icon)</string>
    <string name="pref_app_preferred_order_entries_recent">Most recently used first</string>
    <string name="pref_app_preferred_order_entries_alphabetical">Alphabetical order</string>
    <string name="pref_app_preferred_order_entries_usages">Most used first</string>
    <string name="action_set_wallpaper">Set wallpaper</string>
    <string name="pref_allow_rotation">Allow orientation change</string>
</resources>
