<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-2017 Hayai Software
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND
  ~ either express or implied. See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="1" android:showAsAction="never" />
    <item android:id="@+id/action_refresh_app_list" android:title="@string/action_refresh_app_list"
        android:orderInCategory="2" android:showAsAction="never" android:visible="false"/>
    <item android:id="@+id/action_system_settings" android:title="@string/action_system_settings"
        android:orderInCategory="3" android:showAsAction="never" />
    <item android:id="@+id/action_manage_apps" android:title="@string/action_manage_apps"
        android:orderInCategory="3" android:showAsAction="never" />
    <item android:id="@+id/action_set_wallpaper" android:title="@string/action_set_wallpaper"
        android:orderInCategory="4" android:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="5" android:showAsAction="never" />
</menu>
